--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         local-dir: ./src/
-        server-dir: public_html/kb/sfsb/
+        server-dir: ${{ vars.FTP_DESTINATION_SERVER_DIR_PROD }}
         exclude: |
           **/.git*
           **/.git*/**
