--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+env:
+  FTP_DESTINATION_SERVER_DIR: ${{ github.ref == 'refs/heads/main' && vars.FTP_DESTINATION_SERVER_DIR_PROD || vars.FTP_DESTINATION_SERVER_DIR_DEV }}
+
 on: push
 name: 🚀 Deploy website on push
 jobs:
@@ -15,7 +18,7 @@ jobs:
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         local-dir: ./src/
-        server-dir: public_html/kb/sfsb/
+        server-dir: ${{ env.FTP_DESTINATION_SERVER_DIR }}
         exclude: |
           **/.git*
           **/.git*/**
